fix link url, img spacing and add new photo

--- a/app/assets/stylesheets/home.css.scss
+++ b/app/assets/stylesheets/home.css.scss
@@ -25,8 +25,3 @@ body {
 #btnbottom {
   margin-bottom: 4px;
 }
-
-
-.img {
-  margin-top: 20px;
-}
